example/tests/resolver/test-3.nbl
fun test()
{
    var t = "1";
    var t = "2"; // error
}
